[gd_scene load_steps=4 format=2]

[ext_resource path="res://TerminalCommand.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0.196078, 0.501961, 1 )

[node name="TerminalCommand" type="Node2D"]
script = ExtResource( 1 )

[node name="Output" type="RichTextLabel" parent="."]
margin_left = 328.0
margin_top = 8.0
margin_right = 680.0
margin_bottom = 312.0
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "'type' help for more info
'command list' for available command"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputTerminal" type="TextEdit" parent="."]
margin_left = 328.0
margin_top = 320.0
margin_right = 680.0
margin_bottom = 592.0
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="cursor_changed" from="InputTerminal" to="." method="_on_InputTerminal_cursor_changed"]
[connection signal="text_changed" from="InputTerminal" to="." method="_on_InputTerminal_text_changed"]
